# texting_of_isaac

./: .gitignore  ASSETS.md  CLAUDE.md  DEPLOY.md  README.md  RUN_DEMO.md  WEB_FRONTEND_GUIDE.md  example_state_export.py  example_web_frontend.html  example_websocket_server.py  main.py  pyproject.toml  requirements.txt
docs/plans/: 2026-01-13-enemy-shooting-design.md  2026-01-13-prototype-implementation.md  2026-01-13-tui-roguelike-design.md  2026-01-14-player-damage-design.md  2026-01-14-player-damage-implementation.md  2026-01-15-door-system-design.md  (+15 more)
src/: config.py
tests/: conftest.py  test_ai_system.py  test_bomb_pickup.py  test_bomb_system.py  test_boss_ai_system.py  test_boss_components.py  test_boss_entities.py  test_boss_floors_integration.py  test_boss_health_bar_system.py  test_boss_patterns.py  test_coin_pickup.py  test_collision_system.py  test_components.py  test_config.py  test_doors.py  test_dungeon.py  test_dungeon_generator.py  test_enemy_entities.py  test_enemy_shooting_system.py  test_engine.py  test_entities.py  test_floor_transition_system.py  test_game_loop_integration.py  test_game_state_system.py  test_homing_system.py  test_input_system.py  test_integration.py  test_invincibility_system.py  test_item_pickup_system.py  test_items.py  test_minimap_system.py  test_movement_system.py  test_render_system.py  test_room.py  test_room_clear_rewards.py  test_room_manager.py  test_session_list.py  test_session_manager.py  test_shooting_system.py  test_shop_entities.py  (+3 more)
web/: index.html  package.json  vite.config.js  vitest.config.ts
web/src/: ui.ts  (+8 more)
(+61 files in other folders)
